--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.row {
+  width: 600px;
+  height: 600px;
+
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
